# velocity-hospitality-os

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SETUP_GIT.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
demo/: README.md
docs/: agentic-loop.md  architecture.md  rag.md
examples/: sop_coach_demo.py
infra/: README.md  template.yaml
src/velocity_hos/: __init__.py  config.py
src/velocity_hos/agents/: __init__.py  base.py  executive_intelligence.py  guest_recovery.py  hr_onboarding.py  revenue.py  sop_coach.py  work_order.py  workforce_planning.py
src/velocity_hos/integrations/: __init__.py  base.py  payroll.py  pms.py  pos.py
src/velocity_hos/llm/: __init__.py  base.py  bedrock.py  local.py
src/velocity_hos/orchestration/: __init__.py  approval.py  loop.py
src/velocity_hos/rag/: __init__.py  store.py
tests/: test_executive_intelligence.py  test_hr_onboarding.py  test_loop.py  test_sop_coach.py
