[project]
name = "velocity-hospitality-os"
version = "0.1.0"
description = "The agentic execution layer for hospitality — seven supervised AI agents with human-in-the-loop."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Druvaughn Edwards", email = "druedwards3@gmail.com" }]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
